tests/baselines/reference/exportEqualsDefaultProperty.errors.txt
imp.ts(2,5): error TS2339: Property 'toExponential' does not exist on type '{ greeting: string; default: number; }'.


==== exp.ts (0 errors) ====
    var x = {
        "greeting": "hello, world",
        "default": 42
    };
    
    export = x
    
==== imp.ts (1 errors) ====
    import foo from "./exp";
    foo.toExponential(2);
        ~~~~~~~~~~~~~
!!! error TS2339: Property 'toExponential' does not exist on type '{ greeting: string; default: number; }'.
    